--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ file(GLOB gTestSource "test/*.cpp")
 
 # create executables
 add_executable(Wordle main.cpp ${gTestSource})
-add_executable(WordleClient word_client_main.cpp)
+add_executable(WordleClient wordle_client_main.cpp)
 
 target_link_libraries(Wordle gtest pthread)
